@@ -1,6 +1,7 @@
 0.98_01
     Bug Fixes
     * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
+    * subtests now work with threads turned on. [github #145]
 
 
 0.98  Wed, 23 Feb 2011 14:38:02 +1100
